# project_imprint

./: .agent_instructions.md  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  decisions.md  fix.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  start.bat
.github/workflows/: ci.yml
imprint/: __init__.py  __main__.py  config.py  constants.py  engine.py  events.py  logging_setup.py  math_utils.py
imprint/gui/: __init__.py  app.py  tooltips.py  widgets.py
tests/: __init__.py  conftest.py  test_config.py  test_constants.py  test_engine.py  test_engine_pipeline.py  test_events.py  test_gui.py  test_gui_app.py  test_logging_setup.py  test_main.py  test_math_utils.py  test_tooltips.py  test_widgets.py
