[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "imprint-face-sorter"
version = "5.0.0"
description = "GPU-accelerated desktop application for sorting images based on facial similarity."
requires-python = ">=3.9,<3.14"
license = {text = "MIT"}
authors = [{name = "Imprint Team"}]
readme = "README.md"

dependencies = [
    "insightface>=0.7.3,<0.8.0",
    "onnxruntime-gpu>=1.15.1,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0,<5.0.0",
]

[project.optional-dependencies]
perf = [
    "scipy>=1.10.0,<2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit",
    "pip-audit",
]


[project.scripts]
imprint = "imprint.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM117"]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


